[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "helloworld-server"
path = "src/server.rs"
required-features = ["tls"]

[[bin]]
name = "helloworld-client"
path = "src/client.rs"
required-features = ["tls"]

[features]
tls = ["tonic/tls"]
default = ["tls"]

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
async-stream = "0.3"
hostname = "0.3"

[build-dependencies]
tonic-build = "0.9"
